<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.settings.SettingActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="#CCCCCC" >

        <ImageButton
            android:id="@+id/setting_imgb_previous"
            android:layout_width="@dimen/common_actionbar_backKey_width"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/common_actionbar_backKey_paddingLeft"
            android:background="@null"
            android:gravity="center"
            android:scaleType="centerInside"
            android:src="@drawable/back_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_title"
            android:textSize="@dimen/common_actionbar_title_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:id="@+id/setting_rel_topArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_btn_shape"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/setting_txt_msgNotifySetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_msgNotify" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/setting_divideLine_verMargin"
                android:layout_marginTop="@dimen/setting_divideLine_verMargin"
                android:background="#CCCCCC" />

            <TextView
                android:id="@+id/setting_txt_viewSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_viewSetting" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/setting_divideLine_verMargin"
                android:layout_marginTop="@dimen/setting_divideLine_verMargin"
                android:background="#CCCCCC" />

            <TextView
                android:id="@+id/setting_txt_additionalFunction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/setting_additionalFunction" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/setting_rel_topArea"
            android:layout_marginTop="@dimen/setting_downloadedFiles_marginTop"
            android:background="@drawable/setting_btn_shape"
            android:gravity="center"
            android:visibility="gone"
            android:text="@string/setting_downloadedFiles" />

        <TextView
            android:id="@+id/setting_txt_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/setting_logout_marginTop"
            android:background="@drawable/setting_btn_logout_shape"
            android:gravity="center"
            android:text="@string/setting_logout"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/setting_txt_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/setting_txt_logout"
            android:background="@drawable/setting_btn_shape"
            android:gravity="center"
            android:text="@string/setting_about" />
    </RelativeLayout>

</LinearLayout>