<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_lin_rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.settings.aboutActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="#CCCCCC" >

        <ImageButton
            android:id="@+id/about_imgb_previous"
            android:layout_width="@dimen/common_actionbar_backKey_width"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:paddingLeft="@dimen/common_actionbar_backKey_paddingLeft"
            android:scaleType="centerInside"
            android:src="@drawable/back_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_title"
            android:textSize="@dimen/common_actionbar_title_textSize" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:layout_width="@dimen/about_qrcode_imgSize"
            android:layout_height="@dimen/about_qrcode_imgSize"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/qrcode" />

        <TextView
            android:id="@+id/about_txt_currentVersionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/about_currentVersionName_marginTop"
            android:text="@string/about_currentVersionName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/about_mainArea_marginTop"
            android:background="@drawable/setting_btn_shape"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/about_update" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/about_divideLine_verMargin"
                android:layout_marginTop="@dimen/about_divideLine_verMargin"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/about_intro" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/about_divideLine_verMargin"
                android:layout_marginTop="@dimen/about_divideLine_verMargin"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/about_helpAndFeedback" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>