<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.yineng.ynmessager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/main_cirImg_avatar"
        android:layout_width="@dimen/main_avatar_imgSize"
        android:layout_height="@dimen/main_avatar_imgSize"
        android:src="@drawable/def_avatar"
        app:border_color="@color/whitesmoke"
        app:border_width="@dimen/main_avatar_borderWidth" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_divider_height"
        android:text="李伟"
        android:textColor="@color/white"
        android:textSize="@dimen/main_textSize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_divider_height"
        android:text="编辑个性签名"
        android:textColor="@color/white"
        android:textSize="@dimen/main_textSize" />

    <Button
        android:id="@+id/main_btn_darkMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_divider_height"
        android:text="@string/main_darkMode"
        android:textColor="@color/white"
        android:textSize="@dimen/main_textSize" />

    <Button
        android:id="@+id/main_btn_mySettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_divider_height"
        android:text="@string/main_mySettings"
        android:textColor="@color/white"
        android:textSize="@dimen/main_textSize" />
    
        <Button
        android:id="@+id/main_btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/main_divider_height"
        android:text="@string/main_logout"
        android:textColor="@color/white"
        android:textSize="@dimen/main_textSize" />

</LinearLayout>