<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.settings.DistractionFreeSettingActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="#CCCCCC" >

        <ImageButton
            android:id="@+id/distractionFreeSetting_imgb_previous"
            android:layout_width="@dimen/common_actionbar_backKey_width"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:paddingLeft="@dimen/common_actionbar_backKey_paddingLeft"
            android:scaleType="centerInside"
            android:src="@drawable/back_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/distractionFreeSetting_title"
            android:textSize="@dimen/common_actionbar_title_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_btn_shape"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/distractionFreeSetting_img_arrowRight1"
                    android:layout_width="@dimen/distractionFreeSetting_arrowRight_size"
                    android:layout_height="@dimen/distractionFreeSetting_arrowRight_size"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right" />

                <TextView
                    android:id="@+id/distractionFreeSetting_txt_beginTimeDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/distractionFreeSetting_img_arrowRight1"
                    android:text="@string/distractionFreeSetting_beginTimeDisplay" />

                <TextView
                    android:id="@+id/distractionFreeSetting_txt_beginTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/distractionFreeSetting_beginTime" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/distractionFreeSetting_divideLine_verMargin"
                android:layout_marginTop="@dimen/distractionFreeSetting_divideLine_verMargin"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <ImageView
                    android:id="@+id/distractionFreeSetting_img_arrowRight2"
                    android:layout_width="@dimen/distractionFreeSetting_arrowRight_size"
                    android:layout_height="@dimen/distractionFreeSetting_arrowRight_size"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/arrow_right" />

                <TextView
                    android:id="@+id/distractionFreeSetting_txt_endTimeDisplay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/distractionFreeSetting_img_arrowRight2"
                    android:text="@string/distractionFreeSetting_endTimeDisplay" />

                <TextView
                    android:id="@+id/distractionFreeSetting_txt_endTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/distractionFreeSetting_endTime" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>