<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.settings.FontSizeSettingActivity" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_actionbar_height"
        android:background="#CCCCCC" >

        <ImageButton
            android:id="@+id/fontSizeSetting_imgb_previous"
            android:layout_width="@dimen/common_actionbar_backKey_width"
            android:layout_height="match_parent"
            android:background="@null"
            android:gravity="center"
            android:paddingLeft="@dimen/common_actionbar_backKey_paddingLeft"
            android:scaleType="centerInside"
            android:src="@drawable/back_key" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/fontSizeSetting_title"
            android:textSize="@dimen/common_actionbar_title_textSize" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/setting_btn_shape"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fontSizeSetting_small" />

                <RadioButton
                    android:id="@+id/fontSize_radb_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/fontSizeSetting_divideLine_verMargin"
                android:layout_marginTop="@dimen/fontSizeSetting_divideLine_verMargin"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fontSizeSetting_medium" />

                <RadioButton
                    android:id="@+id/fontSize_radb_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/fontSizeSetting_divideLine_verMargin"
                android:layout_marginTop="@dimen/fontSizeSetting_divideLine_verMargin"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fontSizeSetting_huge" />

                <RadioButton
                    android:id="@+id/fontSize_radb_huge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/setting_divideLine_height"
                android:layout_marginBottom="@dimen/fontSizeSetting_divideLine_verMargin"
                android:layout_marginTop="@dimen/fontSizeSetting_divideLine_verMargin"
                android:background="#CCCCCC" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/fontSizeSetting_xhuge" />

                <RadioButton
                    android:id="@+id/fontSize_radb_xhuge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>